--- a/css/styles.css
+++ b/css/styles.css
@@ -4,24 +4,32 @@
 
 #allfather{
   background-color: white;
+  box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.2), 0 2px 7px 0 rgba(0, 0, 0, 0.19);
+  padding: 2%;
 }
 
 #profile_pic{
-  border-radius: 50%;
   margin-top: 4%;
-  margin-left: auto;
-  margin-right: auto;
   display: block;
   background-color: white;
   padding: 1%;
   box-shadow: 0 0px 0px 0 rgba(0, 0, 0, 0.2), 0 2px 7px 0 rgba(0, 0, 0, 0.19);  
-  /*margin-bottom: 2%;*/
+}
+
+.icon{
+  width: 25px;
+}
+
+.contact-link{
+  display:inline;
+  margin-right: 3%;
 }
 
 /* On screens that are 1920px or less */
 @media screen and (max-width: 1920px) {
   body {    
     background-color: lightgrey;
+    font-family: "Lucida Console", Arial, serif;
   }
   #allfather{
     width: 60%;
@@ -51,7 +59,7 @@
 /* On screens that are 1000px or less */
 @media screen and (max-width: 1000px) {
   #allfather{
-    width: 100%;
+    width: 95%;
   }
 }/* 1000px */
 
@@ -60,11 +68,11 @@
   #profile_pic{
     width: 20%;
   }
-}/* 750px */
+}/* 750px 
 
 /* On screens that are 500px or less */
 @media screen and (max-width: 500px) {
   #profile_pic{
     width: 25%;
   }
-}/* 500px */
+}/* 500px 
