--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,12 @@ body {
 
 #name{
   font-size: 40px;
-  margin-left: 100px;
   margin-top: 150px;
-  color: white;
 }
 
 .contact-info{
   color: white;
+  margin-left: 100px;  
 }
 
 .hover-bright{
@@ -63,9 +62,10 @@ body {
     height: 488px;/* 500-2*margin */
   }
   #name{
-    font-size: 70px;
-    margin-left: 100px;
-    margin-top: 150px;
+    font-size: 35px;
+  }
+  .contact-info{
+    margin-left: 80px;
   }
 }
 
@@ -77,9 +77,11 @@ body {
     height: 388px;/* 400-2*margin */
   }
   #name{
-    font-size: 50px;
-    margin-left: 90px;
-    margin-top: 100px;
+    font-size: 30px;    
+    margin-top: 80px;
+  }
+  .contact-info{
+    margin-left: 50px;
   }
 }
 
@@ -91,10 +93,13 @@ body {
     height: 288px;/* 300-2*margin */
   }
   #name{
-    font-size: 30px;
-    margin-left: 85px;
+    font-size: 20px;
+  }
+  .contact-info{
+    margin-left: 30px;
   }
 }
+
 
 @media screen and (max-width: 700px) {
   #parent-of-all {
@@ -104,8 +109,10 @@ body {
     height: 388px;/* 400-2*margin */
   }
   #name{
-    font-size: 50px;
-    margin-left: 85px;
+    font-size: 30px;
+  }
+  .contact-info{
+    margin-left: 30px;
   }
   .two-cell-row{
     grid-template-columns: 1fr;
@@ -120,11 +127,13 @@ body {
     height: 238px;/* 250-2*margin */
   }
   #name{
-    font-size: 30px;
-    margin-left: 55px;
-    margin-top: 80px;
+    font-size: 20px;
+    margin-top: 30px;
   }
-  .two-cell-row{
-    grid-template-columns: 1fr;
+  .contact-info{
+    margin-left: 30px;
+  }
+  .sub-name-detail{
+    font-size: 12px;
   }
 }
