--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,93 @@ body {
   margin-top: 150px;
 }
 
-.contact-info{
+#projects-banner{
+  font-size: 100px;
+  margin-top: 37%;
+  margin-left: 40px;
+  opacity: 0.1;  
+}
+
+#skills{
+  margin-top: -400px;
+  /*font-weight: bold;*/
+  line-height: 80%;
+}
+
+#python{
+  margin-left: 400px;
+  font-size: 25px;
+}
+
+#android{
+  margin-left: 70px;
+  font-size: 20px;
+}
+
+#network{
+  margin-left: 270px;
+  font-size: 18px;
+}
+
+#robotics{
+  margin-left: 450px;
+  font-size: 18px;
+}
+
+#image-processing{
+  margin-left: 30px;
+  font-size: 15px;
+}
+
+#concurrency{
+  margin-left: 300px;
+  font-size: 20px;
+}
+
+#java{
+  margin-left: 100px;
+  font-size: 30px;  
+}
+
+#cpp{
+  margin-left: 250px;
+  font-size: 25px;
+}
+
+#golang{
+  margin-left: 350px;
+  font-size: 35px;
+}
+
+#iot{
+  margin-left: 15px;
+  font-size: 30px;
+}
+
+#ml{
+  margin-left: 230px;
+  font-size: 25px;
+}
+
+#web{
+  margin-left: 90px;
+}
+
+#nodejs{
+  margin-left: 430px;
+  font-size: 20px;
+}
+
+.contact-info{  
+  margin-left: 100px;
+}
+
+.white-text{
   color: white;
-  margin-left: 100px;  
 }
 
 .hover-bright{
-  opacity: 0.5;
+  opacity: 0.3;
   filter: alpha(opacity=50); /* For IE8 and earlier */
   -webkit-transition-duration: 1s; /* Safari */
   transition-duration: 1s;
@@ -49,9 +129,8 @@ body {
   box-shadow: 0 6px 12px 0 rgba(0,0,0,0.2);
 }
 
-.half-cell-cover{
-  width: 100%;
-  border-radius: 5px;
+.white-border{
+  border: solid white 1px;
 }
 
 @media screen and (max-width: 1350px) {
