I lost. adding a framework after all

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,886 +1,4 @@
-body {    
-  background-color: rgb(30, 30, 30);
-  font-family: "Lucida Console", Arial, serif;  
+#allfather{  
+  width: 60%;
+  margin: auto;
 }
-
-a{
-  text-decoration: none;
-}
-
-#parent-of-all {
-  display: grid;
-  width: 1200px;
-  margin-left: auto;
-  margin-right: auto;  
-}
-
-#name{
-  font-size: 40px;
-  margin-top: 150px;
-}
-
-#projects-banner{
-  font-size: 100px;
-  margin-top: 37%;
-  margin-left: 40px;
-  opacity: 0.1;  
-}
-
-#skills{
-  margin-top: -434px;
-  line-height: 15%;  
-}
-
-#python{
-  margin-left: 400px;
-  font-size: 20px;
-}
-
-#android{
-  margin-left: 70px;
-  font-size: 20px;
-}
-
-#network{
-  margin-left: 270px;
-  font-size: 18px;
-}
-
-#robotics{
-  margin-left: 450px;
-  font-size: 18px;
-}
-
-#image-processing{
-  margin-left: 30px;
-  font-size: 15px;
-}
-
-#concurrency{
-  margin-left: 300px;
-  font-size: 20px;
-}
-
-#java{
-  margin-left: 100px;
-  font-size: 30px;  
-}
-
-#cpp{
-  margin-left: 250px;
-  font-size: 25px;
-}
-
-#golang{
-  margin-left: 350px;
-  font-size: 35px;
-}
-
-#iot{
-  margin-left: 15px;
-  font-size: 30px;
-}
-
-#ml{
-  margin-left: 230px;
-  font-size: 25px;
-}
-
-#web{
-  margin-left: 90px;
-}
-
-#nodejs{
-  margin-left: 430px;
-  font-size: 20px;
-}
-
-#tensorflow{
-  margin-left: 440px;
-  font-size: 16px;
-}
-
-#keras{
-  margin-left: 40px;
-  font-size: 18px;
-}
-
-#raspberrypi{
-  margin-left: 140px;
-  font-size: 20px;
-}
-
-#websockets{
-  margin-left: 17px;
-  font-size: 17px;
-}
-
-#c{
-  margin-left: 500px;
-  font-size: 20px;
-}
-
-#opencv{
-  margin-left: 200px;
-  font-size: 12px;
-}
-
-#nodemcu{
-  margin-left: 300px;
-  font-size: 25px;
-}
-
-#chatbot{
-  margin-left: 100px;
-  font-size: 20px;
-}
-
-#microservices{
-  margin-left: 250px;
-  font-size: 14px;
-}
-
-#docker{
-  margin-left: 440px;
-  font-size: 20px;
-}
-
-.contact-info{  
-  margin-left: 100px;
-}
-
-.white-border{
-  border:solid white 1px;
-}
-
-.white-text{
-  color: white;
-}
-
-.hover-bright{
-  opacity: 0.3;
-  filter: alpha(opacity=50); /* For IE8 and earlier */
-  -webkit-transition-duration: 1s; /* Safari */
-  transition-duration: 1s;
-}
-
-.hover-bright:hover{
-  opacity: 1.0;
-  filter: alpha(opacity=100); /* For IE8 and earlier */
-}
-
-.two-cell-row{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.cell{
-  height: 588px;/* ////    600 - 2*(margin)   ///// */
-  width: auto;
-  margin: 6px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  border-radius: 5px;
-}
-
-.cell:hover{
-  box-shadow: 0 6px 12px 0 rgba(0,0,0,0.2);
-}
-
-.white-border{
-  border: solid white 1px;
-}
-
-@media screen and (max-width: 1350px) {
-  #parent-of-all {
-    width: 1000px;
-  }
-  .cell{
-    height: 488px;/* 500-2*margin */
-  }
-  #name{
-    font-size: 35px;
-  }
-  .contact-info{
-    margin-left: 80px;
-  }
-  #skills{
-    margin-top: -340px;
-    line-height: 0%;
-  }
-  #projects-banner{
-    font-size: 80px;
-  }
-
-  #python{
-    margin-left: 400px;
-    font-size: 20px;
-  }
-
-  #android{
-    margin-left: 70px;
-    font-size: 20px;
-  }
-
-  #network{
-    margin-left: 220px;
-    font-size: 18px;
-  }
-
-  #robotics{
-    margin-left: 380px;
-    font-size: 18px;
-  }
-
-  #image-processing{
-    margin-left: 30px;
-    font-size: 15px;
-  }
-
-  #concurrency{
-    margin-left: 300px;
-    font-size: 20px;
-  }
-
-  #java{
-    margin-left: 100px;
-    font-size: 20px;  
-  }
-
-  #cpp{
-    margin-left: 250px;
-    font-size: 20px;
-  }
-
-  #golang{
-    margin-left: 350px;
-    font-size: 15px;
-  }
-
-  #iot{
-    margin-left: 30px;
-    font-size: 14px;
-  }
-
-  #ml{
-    margin-left: 230px;
-    font-size: 20px;
-  }
-
-  #web{
-    margin-left: 90px;
-  }
-
-  #nodejs{
-    margin-left: 330px;
-    font-size: 20px;
-  }
-
-  #tensorflow{
-    margin-left: 380px;
-    font-size: 16px;
-  }
-
-  #keras{
-    margin-left: 40px;
-    font-size: 18px;
-  }
-
-  #raspberrypi{
-    margin-left: 140px;
-    font-size: 20px;
-  }
-
-  #websockets{
-    margin-left: 17px;
-    font-size: 17px;
-  }
-
-  #c{
-    margin-left: 450px;
-    font-size: 20px;
-  }
-
-  #opencv{
-    margin-left: 200px;
-    font-size: 12px;
-  }
-
-  #nodemcu{
-    margin-left: 300px;
-    font-size: 25px;
-  }
-
-  #chatbot{
-    margin-left: 100px;
-    font-size: 20px;
-  }
-
-  #microservices{
-    margin-left: 250px;
-    font-size: 14px;
-  }
-
-  #docker{
-    margin-left: 380px;
-    font-size: 20px;
-  }
-}/* 1350 */
-
-@media screen and (max-width: 1100px) {
-  #parent-of-all {
-    width: 800px;
-  }
-  .cell{
-    height: 388px;/* 400-2*margin */
-  }
-  #name{
-    font-size: 30px;    
-    margin-top: 80px;
-  }
-  .contact-info{
-    margin-left: 50px;
-  }
-  #skills{
-    margin-top: -280px;
-    line-height: 0%;
-  }
-  #projects-banner{
-    font-size: 70px;
-    margin-left: 20px;
-  }
-
-  #python{
-    margin-left: 270px;
-    font-size: 14px;
-  }
-
-  #android{
-    margin-left: 70px;
-    font-size: 13px;
-  }
-
-  #network{
-    margin-left: 200px;
-    font-size: 14px;
-  }
-
-  #robotics{
-    margin-left: 160px;
-    font-size: 11px;
-  }
-
-  #image-processing{
-    margin-left: 30px;
-    font-size: 15px;
-  }
-
-  #concurrency{
-    margin-left: 200px;
-    font-size: 16px;
-  }
-
-  #java{
-    margin-left: 100px;
-    font-size: 14px;  
-  }
-
-  #cpp{
-    margin-left: 250px;
-    font-size: 15px;
-  }
-
-  #golang{
-    margin-left: 40px;
-    font-size: 15px;
-  }
-
-  #iot{
-    margin-left: 130px;
-    font-size: 14px;
-  }
-
-  #ml{
-    margin-left: 230px;
-    font-size: 15px;
-  }
-
-  #web{
-    margin-left: 90px;
-  }
-
-  #nodejs{
-    margin-left: 280px;
-    font-size: 16px;
-  }
-
-  #tensorflow{
-    margin-left: 180px;
-    font-size: 16px;
-  }
-
-  #keras{
-    margin-left: 40px;
-    font-size: 18px;
-  }
-
-  #raspberrypi{
-    margin-left: 140px;
-    font-size: 14px;
-  }
-
-  #websockets{
-    margin-left: 17px;
-    font-size: 17px;
-  }
-
-  #c{
-    margin-left: 310px;
-    font-size: 12px;
-  }
-
-  #opencv{
-    margin-left: 200px;
-    font-size: 12px;
-  }
-
-  #nodemcu{
-    margin-left: 300px;
-    font-size: 15px;
-  }
-
-  #chatbot{
-    margin-left: 100px;
-    font-size: 12px;
-  }
-
-  #microservices{
-    margin-left: 220px;
-    font-size: 14px;
-  }
-
-  #docker{
-    margin-left: 60px;
-    font-size: 14px;
-  }
-}/* 1100 */
-
-@media screen and (max-width: 900px) {
-  #parent-of-all {
-    width: 600px;
-  }
-  .cell{
-    height: 288px;/* 300-2*margin */
-  }
-  #name{
-    font-size: 20px;
-  }
-  .contact-info{
-    margin-left: 30px;
-  }
-  #skills{
-    margin-top: -220px;
-    line-height: 0%;
-  }
-  #projects-banner{
-    font-size: 50px;
-    margin-left: 20px;
-  }
-
-  #python{
-    margin-left: 210px;
-    font-size: 10px;
-  }
-
-  #android{
-    margin-left: 10px;
-    font-size: 13px;
-  }
-
-  #network{
-    margin-left: 110px;
-    font-size: 14px;
-  }
-
-  #robotics{
-    margin-left: 160px;
-    font-size: 11px;
-  }
-
-  #image-processing{
-    margin-left: 30px;
-    font-size: 11px;
-  }
-
-  #concurrency{
-    margin-left: 150px;
-    font-size: 12px;
-  }
-
-  #java{
-    margin-left: 100px;
-    font-size: 14px;  
-  }
-
-  #cpp{
-    margin-left: 250px;
-    font-size: 11px;
-  }
-
-  #golang{
-    margin-left: 40px;
-    font-size: 12px;
-  }
-
-  #iot{
-    margin-left: 130px;
-    font-size: 10px;
-  }
-
-  #ml{
-    margin-left: 20px;
-    font-size: 11px;
-  }
-
-  #web{    
-    margin-left: 90px;
-    font-size: 11px;
-  }
-
-  #nodejs{
-    margin-left: 200px;
-    font-size: 12px;
-  }
-
-  #tensorflow{
-    margin-left: 180px;
-    font-size: 10px;
-  }
-
-  #keras{
-    margin-left: 40px;
-    font-size: 11px;
-  }
-
-  #raspberrypi{
-    margin-left: 140px;
-    font-size: 11px;
-  }
-
-  #websockets{
-    margin-left: 17px;
-    font-size: 12px;
-  }
-
-  #c{
-    margin-left: 240px;
-    font-size: 12px;
-  }
-
-  #opencv{
-    margin-left: 20px;
-    font-size: 12px;
-  }
-
-  #nodemcu{
-    margin-left: 210px;
-    font-size: 15px;
-  }
-
-  #chatbot{
-    margin-left: 100px;
-    font-size: 12px;
-  }
-
-  #microservices{
-    margin-left: 110px;
-    font-size: 14px;
-  }
-
-  #docker{
-    margin-left: 10px;
-    font-size: 14px;
-  }
-}/* 900 */
-
-
-@media screen and (max-width: 700px) {
-  #parent-of-all {
-    width: 400px;
-  }
-  .cell{
-    height: 388px;/* 400-2*margin */
-  }
-  #name{
-    font-size: 30px;
-  }
-  .contact-info{
-    margin-left: 30px;
-  }
-  .two-cell-row{
-    grid-template-columns: 1fr;
-  }
-  #skills{
-    margin-top: -270px;
-    line-height: 0%;
-  }
-  #projects-banner{
-    font-size: 70px;
-    margin-left: 20px;
-  }
-
-  #python{
-    margin-left: 270px;
-    font-size: 14px;
-  }
-
-  #android{
-    margin-left: 70px;
-    font-size: 13px;
-  }
-
-  #network{
-    margin-left: 200px;
-    font-size: 14px;
-  }
-
-  #robotics{
-    margin-left: 160px;
-    font-size: 11px;
-  }
-
-  #image-processing{
-    margin-left: 30px;
-    font-size: 15px;
-  }
-
-  #concurrency{
-    margin-left: 200px;
-    font-size: 16px;
-  }
-
-  #java{
-    margin-left: 100px;
-    font-size: 14px;  
-  }
-
-  #cpp{
-    margin-left: 250px;
-    font-size: 15px;
-  }
-
-  #golang{
-    margin-left: 40px;
-    font-size: 15px;
-  }
-
-  #iot{
-    margin-left: 130px;
-    font-size: 14px;
-  }
-
-  #ml{
-    margin-left: 230px;
-    font-size: 15px;
-  }
-
-  #web{
-    margin-left: 90px;
-  }
-
-  #nodejs{
-    margin-left: 280px;
-    font-size: 16px;
-  }
-
-  #tensorflow{
-    margin-left: 180px;
-    font-size: 16px;
-  }
-
-  #keras{
-    margin-left: 40px;
-    font-size: 18px;
-  }
-
-  #raspberrypi{
-    margin-left: 140px;
-    font-size: 14px;
-  }
-
-  #websockets{
-    margin-left: 17px;
-    font-size: 17px;
-  }
-
-  #c{
-    margin-left: 310px;
-    font-size: 12px;
-  }
-
-  #opencv{
-    margin-left: 200px;
-    font-size: 12px;
-  }
-
-  #nodemcu{
-    margin-left: 300px;
-    font-size: 15px;
-  }
-
-  #chatbot{
-    margin-left: 100px;
-    font-size: 12px;
-  }
-
-  #microservices{
-    margin-left: 220px;
-    font-size: 14px;
-  }
-
-  #docker{
-    margin-left: 60px;
-    font-size: 14px;
-  }
-}/* 700 */
-
-@media screen and (max-width: 500px) {
-  #parent-of-all {
-    width: 250px;
-  }
-  .cell{
-    height: 238px;/* 250-2*margin */
-  }
-  #name{
-    font-size: 20px;
-    margin-top: 30px;
-  }
-  .contact-info{
-    margin-left: 30px;
-  }
-  .sub-name-detail{
-    font-size: 12px;
-  }
-  #skills{
-    margin-top: -175px;
-    line-height: 0%;
-  }
-  #projects-banner{
-    font-size: 42px;
-    margin-left: 20px;
-  }
-
-  #python{
-    margin-left: 180px;
-    font-size: 10px;
-  }
-
-  #android{
-    margin-left: 10px;
-    font-size: 9px;
-  }
-
-  #network{
-    margin-left: 80px;
-    font-size: 9px;
-  }
-
-  #robotics{
-    margin-left: 160px;
-    font-size: 8px;
-  }
-
-  #image-processing{
-    margin-left: 30px;
-    font-size: 8px;
-  }
-
-  #concurrency{
-    margin-left: 150px;
-    font-size: 9px;
-  }
-
-  #java{
-    margin-left: 100px;
-    font-size: 10px;  
-  }
-
-  #cpp{
-    margin-left: 210px;
-    font-size: 11px;
-  }
-
-  #golang{
-    margin-left: 40px;
-    font-size: 9px;
-  }
-
-  #iot{
-    margin-left: 100px;
-    font-size: 10px;
-  }
-
-  #ml{
-    margin-left: 20px;
-    font-size: 9px;
-  }
-
-  #web{    
-    margin-left: 90px;
-    font-size: 8px;
-  }
-
-  #nodejs{
-    margin-left: 190px;
-    font-size: 10px;
-  }
-
-  #tensorflow{
-    margin-left: 160px;
-    font-size: 10px;
-  }
-
-  #keras{
-    margin-left: 40px;
-    font-size: 9px;
-  }
-
-  #raspberrypi{
-    margin-left: 140px;
-    font-size: 10px;
-  }
-
-  #websockets{
-    margin-left: 17px;
-    font-size: 12px;
-  }
-
-  #c{
-    margin-left: 210px;
-    font-size: 8px;
-  }
-
-  #opencv{
-    margin-left: 20px;
-    font-size: 8px;
-  }
-
-  #nodemcu{
-    margin-left: 170px;
-    font-size: 12px;
-  }
-
-  #chatbot{
-    margin-left: 60px;
-    font-size: 10px;
-  }
-
-  #microservices{
-    margin-left: 110px;
-    font-size: 9px;
-  }
-
-  #docker{
-    margin-left: 40px;
-    font-size: 8px;
-  }
-}/* 500 */
