--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,24 @@
 #allfather{  
-  /*width: 60%;
-  margin: auto;*/
+  width: 60%;
+  margin: auto;
   padding-left: 4%;
   padding-right: 4%;
+}
+
+@media only screen and (max-width: 1600px) {
+    #allfather{  
+  		width: 80%;
+	}
+}
+
+@media only screen and (max-width: 1000px) {
+    #allfather{  
+  		width: 90%;
+	}
+}
+
+@media only screen and (max-width: 800px) {
+    #allfather{  
+  		width: 100%;
+	}
 }
